# kindo-assessment

./: .gitignore  README.md  db.sqlite3  main.py  pyproject.toml  pyrightconfig.json
config/: settings.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: client.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/: Confirmation.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  PaymentForm.tsx  TripCard.tsx  TripList.tsx
frontend/src/components/__tests__/: Confirmation.test.tsx  ErrorMessage.test.tsx  LoadingSpinner.test.tsx  PaymentForm.test.tsx  TripCard.test.tsx  TripList.test.tsx
frontend/src/test/: fixtures.ts
frontend/src/types/: index.ts
payments/: admin.py  conftest.py  legacy_processor.py  models.py  serializers.py  services.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_seed_data.py  0003_case_insensitive_enrolment.py
payments/tests/: test_admin.py  test_serializers.py  test_services.py  test_views.py
specs/: 01-data-model.md  02-backend-api.md  03-frontend.md  04-decisions.md
