[project]
name = "kindo-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-stubs>=6.0.1",
    "djangorestframework>=3.17.0",
    "djangorestframework-stubs>=3.16.8",
]

[tool.django-stubs]
django_settings_module = "config.settings"

[dependency-groups]
dev = [
    "django-stubs>=6.0.1",
    "ruff>=0.15.7",
]
